# gain

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.freethreaded  Dockerfile.seqpipe  Jenkinsfile  Jenkinsfile.nightly  Jenkinsfile.python-matrix  Jenkinsfile.release  README.md  dev-environment.yml  docker-compose.override.yaml  docker-compose.yaml  environment.yml  mypy.ini  pylintrc  pyproject.toml  ruff.toml
conda-builder/: Dockerfile
core/: Dockerfile  (+4 more)
demo_annotator/: Dockerfile  pyproject.toml
demo_annotator/conda-recipe/: recipe.yaml
demo_annotator/demo_annotator/: adapter.py  annotate_length.py  demo_annotate_gm_res_adapter.py  demo_annotate_ref_res.py  demo_annotate_ref_res_adapter.py
demo_annotator/demo_annotator/tests/: test_annotate_length.py  test_demo_annotator.py  test_demo_stream_annotator.py
spliceai_annotator/: Dockerfile  Jenkinsfile.integration  pyproject.toml  pytest.ini  spliceai-environment.yml
spliceai_annotator/conda-recipe/: recipe.yaml
spliceai_annotator/jenkins-jobs/: integration.groovy
spliceai_annotator/scripts/: convert_models_to_onnx.py
spliceai_annotator/spliceai_annotator/: spliceai_annotator.py  spliceai_annotator_impl.py  spliceai_backend_onnx.py  spliceai_backend_tensorflow.py
spliceai_annotator/spliceai_annotator/models/: LICENSE  README.md  spliceai1.onnx  spliceai2.onnx  spliceai3.onnx  spliceai4.onnx  spliceai5.onnx
spliceai_annotator/tests/: conftest.py  integration_grr_definition.yaml  test_corpus_rebasing.py  test_onnx_equivalence.py  test_spliceai_annotator.py  test_spliceai_backends.py  test_spliceai_differential.py  test_spliceai_integration.py
spliceai_annotator/tests/corpus/: README.md  assertions.py  build_corpus.py  build_extra_corpus.py  corpus_manifest.json  extra_manifest.json  fixture_io.py  pipeline_config.py  rebasing.py  regenerate_baseline.py  regenerate_baseline_extra.py
spliceai_annotator/tests/fixtures/: .CONTENTS.json
spliceai_annotator/tests/fixtures/hg38/gene_models/: .MANIFEST  gene_models.txt  genomic_resource.yaml  index.html
spliceai_annotator/tests/fixtures/hg38/gene_models/statistics/: index.html  stats.yaml  stats_hash
spliceai_annotator/tests/fixtures/hg38/genome/: .MANIFEST  corpus.fa  corpus.fa.fai  genomic_resource.yaml  index.html
spliceai_annotator/tests/fixtures/hg38/genome/statistics/: col6a2_statistic.yaml  index.html  reference_genome_statistic.yaml  sondonson_statistic.yaml  stats_hash
vep_annotator/: Dockerfile  Jenkinsfile.integration  pyproject.toml
vep_annotator/conda-recipe/: recipe.yaml
vep_annotator/integration_tests/vep_effect_annotator/: annotation.yaml  expected.tsv  gene_models_annotation.yaml  priority_gene_models_annotation.yaml  test_effect_annotator.py  variants.tsv.gz.tbi
vep_annotator/integration_tests/vep_full_annotator/: annotation.yaml  expected.tsv  test_full_annotator.py
vep_annotator/jenkins-jobs/: integration.groovy
vep_annotator/vep_annotator/: vep_annotator.py
vep_annotator/vep_annotator/tests/: test_vep_annotator.py
web_api/: .gitignore  Dockerfile  Dockerfile.production  manage.py  mypy.ini  pylintrc  pyproject.toml
web_api/admin_panel/: urls.py  views.py
web_api/docs/: 164-async-read-views-slo.md  170-ws-notification-responsiveness-slo.md  adrf-spike-162-findings.md
web_api/docs/superpowers/plans/: 2026-06-24-ws-notification-responsiveness-slo.md
web_api/scripts/: backend_linters.sh  backend_run.sh  backend_tests.sh  convert_mypy_output.py  grr-definition-http.yaml  grr-definition-tests.yaml
web_api/web_annotation/: about.md  annotate_helpers.py  annotation.py  annotation_base_view.py  apps.py  asgi.py  authentication.py  consumers.py  executor.py  mail.py  models.py  permissions.py  pipeline_cache.py  serializers.py  settings.py  settings_daphne.py  settings_default.py  settings_e2e.py  settings_gunicorn.py  spike_adrf_probe.py  tasks.py  test_settings.py  testing.py  urls.py  utils.py  views.py  wsgi.py
web_api/web_annotation/editor/: urls.py  views.py
web_api/web_annotation/jobs/: urls.py  validate_vcf_file.py  views.py
web_api/web_annotation/loadtest/: __init__.py  cheap_endpoint_slo.py  ping_view.py  run_daphne_server.sh  run_matrix.sh  run_ws_matrix.sh  ws-matrix-async.json  ws_notification_slo.py
web_api/web_annotation/management/commands/: add_units.py  cleanup_anonymous_jobs.py  create_user.py  export_quotas.py  refreshdaily.py  refreshmonthly.py  set_unlimited.py
web_api/web_annotation/migrations/: 0038_dailymonthly_quota_refresh_log.py  0039_user_is_unlimited.py  0040_remove_anonymoususerquota_daily_allele_queries_and_more.py  0041_add_session_quota.py  0042_alter_anonymoususerquota_ip_alter_userquota_user.py  0043_rename_annotation_type_columns_to_tabular.py
web_api/web_annotation/pipelines/: urls.py  views.py
web_api/web_annotation/quotas/: quotas_readme.MD  urls.py  views.py
web_api/web_annotation/resources/: urls.py  views.py
web_api/web_annotation/single_allele_annotation/: throttling.py  urls.py  views.py
web_api/web_annotation/tests/: conftest.py  test_admin_panel.py  test_annotate_helpers.py  test_annotate_throttling.py  test_api.py  test_await_build.py  test_cleanup_anonymous_jobs.py  test_consumer_resync.py  test_delete_jobs_active.py  test_editor_api.py  test_editor_read_async.py  test_editor_write_async.py  test_executor.py  test_generate_job_name.py  test_jobs.py  test_management_commands.py  test_ping_view.py  test_pipeline_cache.py  test_pipelines.py  test_pipelines_doc_async.py  test_quota_get_or_create_race.py  test_quota_migration.py  test_quotas_api.py  test_quotas_model.py  test_resources_api.py  test_settings_default.py  test_single_annotation.py  test_single_annotation_async.py  test_spike_adrf_probe.py  test_tabular_annotation_type_migration.py  test_users_api.py  test_utils.py  test_ws_notification_responsiveness.py  test_ws_notification_slo_harness.py
web_api/web_annotation/tests/fixtures/grr/pipeline/allele_pipeline/: allele_pipeline.yaml  genomic_resource.yaml
web_api/web_annotation/tests/fixtures/grr/pipeline/test_pipeline/: index.html
(+540 files in other folders)
