[project]
name = "gain-monorepo"
version = "0"
description = "GAIn monorepo virtual root — uv workspace coordinator"
requires-python = ">=3.12"
# Dependencies a fresh `uv sync` (no --package, no
# --all-packages) installs by default. Limited to the two
# always-needed members; the annotator plugins are workspace
# members but optional, install via
# `uv sync --package gain-<name> --group dev` (their CI
# Dockerfiles do exactly this) or `uv sync --all-packages`.
dependencies = [
    "gain-core",
    "gain-web-api",
]

[tool.uv]
# Virtual root — no source code to build / install. Without
# this, uv would try to build a wheel for `gain-monorepo`.
package = false

[tool.uv.workspace]
members = [
    "core",
    "demo_annotator",
    "vep_annotator",
    "spliceai_annotator",
    "web_api",
]

[tool.uv.sources]
gain-core = { workspace = true }
gain-demo-annotator = { workspace = true }
gain-vep-annotator = { workspace = true }
gain-spliceai-annotator = { workspace = true }
gain-web-api = { workspace = true }
