[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "gain-demo-annotator"
description = "GAIn External Demo Annotator"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Lubomir Chorbadjiev", email = "lubomir.chorbadjiev@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "gain-core",
    "fsspec>=2026.2",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/IossifovLab/gpf"

[project.scripts]
annotate_length = "demo_annotator.annotate_length:annotate_length_cli"
demo_annotate_gm_res = "demo_annotator.demo_annotate_gm_res:annotate_genes_cli"
demo_annotate_ref_res = "demo_annotator.demo_annotate_ref_res:annotate_genome_cli"

[project.entry-points."gain.annotation.annotators"]
external_demo_annotator = "demo_annotator.adapter:build_demo_external_annotator_adapter"
external_demo_stream_annotator = "demo_annotator.adapter:build_demo_external_annotator_stream_adapter"
external_demo_gene_annotator = "demo_annotator.demo_annotate_gm_res_adapter:build_demo_external_gene_annotator_adapter"
external_demo_genome_annotator = "demo_annotator.demo_annotate_ref_res_adapter:build_demo_external_genome_annotator_adapter"

[dependency-groups]
dev = [
    "mypy==1.15.0",
    "pylint",
    "pylint-junit",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-xdist",
    "ruff==0.14.6",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
root = ".."
version_scheme = "no-guess-dev"

[tool.hatch.build.targets.wheel]
packages = ["demo_annotator"]
exclude = ["demo_annotator/tests"]

[tool.hatch.build.targets.sdist]
include = ["/demo_annotator"]
exclude = ["demo_annotator/tests"]
