[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "gain-spliceai-annotator"
description = "GAIn SpliceAI annotator plugin"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Lubomir Chorbadjiev", email = "lubomir.chorbadjiev@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "gain-core",
    "numpy>=2.2",
    # Both model runtimes are runtime deps: the backend is chosen per process
    # with SPLICEAI_BACKEND (see spliceai_annotator_impl), TensorFlow by
    # default, so an installed annotator must be able to run either. Which of
    # the two survives is issue #298.
    "onnxruntime>=1.27",
    "tensorflow>=2.18",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/IossifovLab/gain"

[project.entry-points."gain.annotation.annotators"]
spliceai_annotator = "spliceai_annotator:build_spliceai_annotator"

[dependency-groups]
dev = [
    "mypy==1.15.0",
    "pylint",
    "pylint-junit",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-xdist",
    "ruff==0.14.6",
    # Build-time-only tooling for the offline .h5 -> .onnx conversion
    # (scripts/convert_models_to_onnx.py) and the equivalence test
    # (tests/test_onnx_equivalence.py). `onnx` provides onnx.checker;
    # `tf2onnx` is imported by Keras' model.export(format="onnx"). Neither is
    # needed to *run* the committed .onnx -- that is onnxruntime, which #297
    # promoted to a runtime dep above. The equivalence test skips cleanly when
    # these are absent.
    # Pinned: the committed .onnx artifacts were produced by these exact
    # versions, so a float must not silently redefine what "reproduces the
    # .h5" means without an intentional bump here. (onnxruntime carries a
    # lower bound instead, as an installed-at-runtime dep; the committed
    # uv.lock still pins the exact version CI resolves, and
    # tests/test_onnx_equivalence.py re-checks reproduction on every run.)
    "onnx==1.22.0",
    "tf2onnx==1.17.0",
]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0.dev0"

[tool.hatch.version.raw-options]
root = ".."
version_scheme = "no-guess-dev"

[tool.hatch.build.targets.wheel]
packages = ["spliceai_annotator"]

[tool.hatch.build.targets.sdist]
include = ["/spliceai_annotator"]
