[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "gain-vep-annotator"
description = "GAIn VEP Annotator"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Lubomir Chorbadjiev", email = "lubomir.chorbadjiev@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "gain-core",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/IossifovLab/gpf"

[project.scripts]
install_vep_cache = "vep_annotator.install_vep_cache:main"

[project.entry-points."gain.annotation.annotators"]
vep_full_annotator = "vep_annotator.vep_annotator:build_vep_cache_annotator"
vep_effect_annotator = "vep_annotator.vep_annotator:build_vep_effect_annotator"

[dependency-groups]
dev = [
    "mypy==1.15.0",
    "pylint",
    "pylint-junit",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-xdist",
    "ruff==0.14.6",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
root = ".."
version_scheme = "no-guess-dev"

[tool.hatch.build.targets.wheel]
packages = ["vep_annotator"]
exclude = ["vep_annotator/tests"]

[tool.hatch.build.targets.sdist]
include = ["/vep_annotator"]
exclude = ["vep_annotator/tests"]
