[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "django-gpf-web-annotation"
description = "A Django app to contain GPF Web Annotation."
readme = "README.rst"
requires-python = ">=3.12"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Seqpipe Ltd.", email = "lubomir.chorbadjiev@gmail.com" },
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "asgiref",
    "channels>=4",
    "daphne>=4",
    "django>=5.2,<5.3",
    "django-cors-headers>=4.7",
    "djangorestframework>=3.16",
    "psycopg>=3.1.18",
    "python-magic",
    "pyyaml",
    "requests",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://www.iossifovlab.com/"

[project.scripts]
validate_vcf_file = "web_annotation.jobs.validate_vcf_file:main"

[dependency-groups]
dev = [
    "django-stubs==5.2.2",
    "mypy==1.15.0",
    "pylint",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-django",
    "pytest-mock",
    "pytest-xdist",
    "ruff==0.14.6",
    "types-channels",
]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0.dev0"

[tool.hatch.version.raw-options]
root = ".."
version_scheme = "no-guess-dev"

[tool.hatch.build.targets.wheel]
packages = ["web_annotation"]
exclude = ["web_annotation/tests"]

[tool.hatch.build.targets.sdist]
include = ["/web_annotation"]
exclude = ["web_annotation/tests"]
